cloud/operator/2/3/config_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.3.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - -zap-log-level=info
        - -tls-cert-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.crt
        - -tls-private-key-file=/var/run/secrets/couchbase.com/couchbase-operator-admission/tls.key
        - -validate-secrets=true
        - -validate-storage-classes=true
        - -default-file-system-group=true
        command:
        - couchbase-admission-controller
        image: couchbase/admission-controller:build
        imagePullPolicy: IfNotPresent
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.3.0
  creationTimestamp: null
  name: couchbase-operator-admission
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    config.couchbase.com/version: 2.3.0
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lRVDhYNDNQUHdVMVYwNzREMW5LeGhnREFOQmdrcWhraUc5dzBCQVFzRkFEQXEKTVNnd0pnWURWUVFERXg5amIzVmphR0poYzJVdGIzQmxjbUYwYjNJdFlXUnRhWE56YVc5dUlFTkJNQjRYRFRJeQpNREl5T0RFM01qSTBOMW9YRFRNeU1ESXlOakUzTWpJME4xb3dLakVvTUNZR0ExVUVBeE1mWTI5MVkyaGlZWE5sCkxXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBTEJva2xZZkE3UjlTN2xjZDI3MUFlK1E5anNZRm1IZ2w2TCtVN3JINDNzaXpSZ0Zid0cxMU5RZQpSeEQwUmhadnZZRG [...]
    service:
      name: couchbase-operator-admission
      namespace: default
      path: /couchbaseclusters/validate
  failurePolicy: Fail
  name: couchbase-operator-admission.default.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
    - couchbasecollections
    - couchbasecollectiongroups
    - couchbasescopes
    - couchbasescopegroups
    - couchbasemigrationreplications
  sideEffects: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    config.couchbase.com/version: 2.3.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8383"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: couchbase-operator
    spec:
      containers:
      - args:
        - --pod-create-timeout=10m0s
        - --zap-log-level=info
        command:
        - couchbase-operator
        image: couchbase/operator:build
        imagePullPolicy: IfNotPresent
        name: couchbase-operator
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8383
          name: prometheus
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
            scheme: HTTP
        resources: {}
      securityContext:
        runAsNonRoot: true
      serviceAccountName: couchbase-operator
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    config.couchbase.com/version: 2.3.0
  creationTimestamp: null
  name: couchbase-operator
spec:
  ports:
  - name: http-pprof
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-prometheus
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app: couchbase-operator
